--- a/index.html
+++ b/index.html
@@ -148,11 +148,21 @@
     <p>〇〇駅 徒歩3分</p>
     <p>営業時間：6:00 - 23:00（日曜休館）</p>
 
-    <div class="map-placeholder">
-      Google Map
+    <div class="map-container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.1234567890!2d139.7000!3d35.6895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c1234567890%3A0xabcdef1234567890!2z44CSMTAwLTAwMDEg5p2x5Lqs6YO95LiW55WM5a6_5Yy65paw5a6_5Yy66aeF!5e0!3m2!1sja!2sjp!4v1670000000000!5m2!1sja!2sjp"
+        width="100%"
+        height="250"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </div>
+
   </div>
 </section>
+
 
 <section id="contact" class="section">
   <div class="container center">
